<resources>
    <string name="app_name">Catopedia</string>
    <string name="title_home">Home</string>
    <string name="title_search">More Details</string>
    <string name="hint_search">Search by breed</string>
    <string name="title_favorites">Favorites</string>
    <string name="breed_not_found">Unknown breed</string>
    <string name="popular_breeds">Popular Cats on the Internet</string>
    <string name="more_information">Learn more</string>
    <string name="a11y_favorite_icon">Favorite button.</string>
    <string name="fav_cats">My Favorite Cats</string>
    <string name="more_info_subtitle">More Feline Information</string>
    <string name="hint_search_home">Search for a breed using 4 characters.</string>
    <string name="btn_favorite">Favorite</string>
    <string name="life_span">Life Span:\u00A0</string>
    <string name="country">Country:\u00A0</string>
    <string name="temperament">Temperament:\u00A0</string>
    <string name="weight">Weight:\u00A0</string>
    <string name="kg">\u00A0Kg</string>
    <string name="years">\u00A0years</string>
    <string name="wikipedia_for_more_information">Wikipedia for more information</string>
    <string name="don_t_have_favorite_cats_here">Don’t have favorite cats here!</string>
    <string name="text_favorite_helper">Here you can view the list of favorite cat names and remove them using the button.</string>
</resources>