<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.FavoritesFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_fav"
        style="@style/ToolbarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="yes"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name" />

    <TextView
        android:id="@+id/subtitle_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/m_default_16"
        android:layout_marginTop="@dimen/m_default_16"
        android:fontFamily="@font/ft_plus_jakarta_sans"
        android:paddingVertical="@dimen/pv_8"
        android:text="@string/fav_cats"
        android:textColor="@color/black"
        android:textSize="@dimen/fs_subtitle_18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_fav" />

    <TextView
        android:id="@+id/info_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/m_default_16"
        android:paddingVertical="@dimen/pv_8"
        android:fontFamily="@font/ft_plus_jakarta_sans"
        android:text="@string/text_favorite_helper"
        android:textAlignment="textStart"
        android:textColor="@color/brown_link"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_fav" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_fav">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/p_b_100"
            android:layout_marginHorizontal="@dimen/m_default_16"
            tools:itemCount="3"
            tools:listitem="@layout/item_list_favorites" />
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/empty_list_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/don_t_have_favorite_cats_here"
        android:textColor="@color/brown_link"
        android:textSize="@dimen/info_text_16"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle_fav" />

</androidx.constraintlayout.widget.ConstraintLayout>